[package]
name = "Dehydrator4Win"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas", "advanced"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ignore = "0.4"
notify = "6.1.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tree-sitter = "0.22"
regex = "1.10"
native-dialog = "0.7.0"
